# navx-rs

./: Cargo.toml
src/: address.rs  ahrs.rs  lib.rs  protocol.rs  registers.rs  serde.rs  spia.rs  types.rs  watch.rs
src/protocol/: ahrs.rs  mod.rs  registers.rs
src/register/: address.rs  mod.rs  packet.rs  storage.rs
src/serial/: mod.rs  packet.rs  storage.rs
