[package]
name = "navx"
version = "0.1.4"
edition = "2018"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>", "Josh Hejna <josh.hejna@gmail.com>"]

[features]
nightly = ["parking_lot/nightly"]

[dependencies]
byteorder = "1.3"
crossbeam-channel = "0.3"
derive_more = "0.15"
lazy_static = "1.4"
libc = "0.2"
parking_lot = "0.9"
shrinkwraprs = "0.2"
wpilib = "0.4"
log = {version = "0.4", features = ["max_level_debug", "release_max_level_warn"]}

# TODO:
# crc

[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "./target"
