[package]
name = "navx"
version = "0.1.4"
edition = "2018"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>", "Josh Hejna <josh.hejna@gmail.com>"]

[dependencies]
crossbeam-channel = "0.3"
parking_lot = "0.9"
wpilib = "0.4"
log = {version = "0.4", features = ["max_level_debug", "release_max_level_warn"]}

# Packet Parsing
byteorder = "1.3"
bitflags = "1.2"
memchr = "2.2.1"

[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "./target"
